--- a/src/package.json
+++ b/src/package.json
@@ -6,18 +6,70 @@
     "build": "yarn plugin-helpers build",
     "plugin-helpers": "node ../../scripts/plugin_helpers",
     "osd": "node ../../scripts/osd",
-    "test:jest": "../../node_modules/.bin/jest --config ./test/jest.config.js",
-    "test:jest:dev": "../../node_modules/.bin/jest --watch --config ./test/jest.config.js"
+    "test": "jest"
   },
   "dependencies": {
     "chart.js": "3.2.0",
     "react-chartjs-2": "^5.2.0",
     "styled-components": "^5.3.6"
   },
+  "jest": {
+    "rootDir": "./",
+    "modulePaths": [
+      "src",
+      "test"
+    ],
+    "moduleNameMapper": {
+      "#(.*)": "<rootDir>/node_modules/$1"
+    },
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "moduleFileExtensions": [
+      "json",
+      "js",
+      "jsx",
+      "ts",
+      "tsx",
+      "vue",
+      "cjs"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.test.json"
+      },
+      "transform": {
+        "\\.tsx?$": "ts-jest",
+        "\\.jsx?$": "babel-jest"
+      }
+    },
+    "testEnvironment": "jest-environment-jsdom",
+    "testPathIgnorePatterns": [
+      "node_modules"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/"
+    ]
+  },
   "devDependencies": {
-    "jest": "^29.4.3",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "@jest/globals": "^29.4.3",
+    "@testing-library/dom": "8.11.3",
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.5",
+    "@types/jest": "^29.4.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "27.5.1",
+    "jest": "27.5.1",
     "jest-cli": "^29.4.3",
     "jest-dom": "^4.0.0",
-    "jest-environment-jsdom": "^29.4.3"
+    "jest-environment-jsdom": "^29.4.3",
+    "ts-jest": "^27.1.5",
+    "typescript": "^4.9.5"
   }
 }
