--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "chart.js": "3.2.0",
     "react-chartjs-2": "^5.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zustand": "^4.3.5"
   },
   "jest": {
     "rootDir": "./",
